Add high level logging to DB Client (#5292)
* add framework for logging db connections

* pass logger through to db client in admin

* pass logger through to db in mark

* pass logger through to db in mark-scan

* pass logger through for vxdesign

* pass logger to db in scan

* pass logger to db in central scan

* fix logging import

* fix test references to include mockBaseLogger

* generate logging docs and types

* add baselogger to filestore test calls

* update logging autogen

* revert accidental inclusion of printer hack

--- a/libs/logging/log_event_details.toml
+++ b/libs/logging/log_event_details.toml
@@ -786,3 +786,32 @@ eventId = "parse-error"
 eventType = "system-action"
 documentationMessage = "A system action failed to parse data."
 
+[DatabaseConnectInit]
+eventId = "database-connect-init"
+eventType = "system-action"
+documentationMessage = "Initiating connection to the database."
+
+[DatabaseConnectComplete]
+eventId = "database-connect-complete"
+eventType = "system-action"
+documentationMessage = "Database connection established. Success or failure indicated by disposition."
+
+[DatabaseCreateInit]
+eventId = "database-create-init"
+eventType = "system-action"
+documentationMessage = "Initiating creation of the database."
+
+[DatabaseCreateComplete]
+eventId = "database-create-complete"
+eventType = "system-action"
+documentationMessage = "Database created and setup. Success or failure indicated by disposition."
+
+[DatabaseDestroyInit]
+eventId = "database-destroy-init"
+eventType = "system-action"
+documentationMessage = "Initiating destruction of the database."
+
+[DatabaseDestroyComplete]
+eventId = "database-destroy-complete"
+eventType = "system-action"
+documentationMessage = "Database destroyed. Success or failure indicated by disposition."
