--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -46,6 +46,7 @@
     "@votingworks/types": "workspace:*",
     "@votingworks/utils": "workspace:*",
     "debug": "4.3.4",
+    "stream": "^0.0.3",
     "yargs": "17.7.1",
     "zod": "3.23.5"
   },
