--- a/apps/admin/backend/package.json
+++ b/apps/admin/backend/package.json
@@ -57,6 +57,7 @@
     "express": "4.18.2",
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
+    "lodash.get": "^4.4.2",
     "lodash.memoize": "^4.1.2",
     "lru_map": "^0.4.1",
     "luxon": "^3.0.0",
