--- a/libs/fujitsu-thermal-printer/tsconfig.build.json
+++ b/libs/fujitsu-thermal-printer/tsconfig.build.json
@@ -15,6 +15,7 @@
     { "path": "../../libs/image-utils/tsconfig.build.json" },
     { "path": "../../libs/test-utils/tsconfig.build.json" },
     { "path": "../../libs/types/tsconfig.build.json" },
-    { "path": "../../libs/utils/tsconfig.build.json" }
+    { "path": "../../libs/utils/tsconfig.build.json" },
+    { "path": "../../libs/logging/tsconfig.build.json" }
   ]
 }
