--- a/apps/design/backend/package.json
+++ b/apps/design/backend/package.json
@@ -56,6 +56,7 @@
     "fs-extra": "11.1.1",
     "js-sha256": "^0.9.0",
     "jszip": "^3.9.1",
+    "node-html-parser": "^6.1.13",
     "react": "18.3.1",
     "uuid": "9.0.1",
     "zod": "3.23.5"
