--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -58,6 +58,10 @@
     "@tiptap/extension-ordered-list": "^2.6.6",
     "@tiptap/extension-paragraph": "^2.6.6",
     "@tiptap/extension-strike": "^2.6.6",
+    "@tiptap/extension-table": "^2.6.6",
+    "@tiptap/extension-table-cell": "^2.6.6",
+    "@tiptap/extension-table-header": "^2.6.6",
+    "@tiptap/extension-table-row": "^2.6.6",
     "@tiptap/extension-text": "^2.6.6",
     "@tiptap/extension-underline": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
