--- a/libs/logging/scripts/log_event_ids.ts.template
+++ b/libs/logging/scripts/log_event_ids.ts.template
@@ -4,7 +4,7 @@
 */
 
 import { throwIllegalValue } from '@votingworks/basics';
-import { BaseLogEventDetails, LogSource, LogEventType } from './base_types';
+import { BaseLogEventDetails, AppName, LogEventType } from './base_types';
 
 export interface LogDetails extends Omit<BaseLogEventDetails, 'eventId'> {
   // LogEventId is generated later in this file
