--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -52,7 +52,10 @@
     "@tiptap/extension-bold": "^2.6.6",
     "@tiptap/extension-bullet-list": "^2.6.6",
     "@tiptap/extension-document": "^2.6.6",
+    "@tiptap/extension-dropcursor": "^2.6.6",
+    "@tiptap/extension-gapcursor": "^2.6.6",
     "@tiptap/extension-hard-break": "^2.6.6",
+    "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-italic": "^2.6.6",
     "@tiptap/extension-list-item": "^2.6.6",
     "@tiptap/extension-ordered-list": "^2.6.6",
