Add UiRichTextString component
The react-i18next's simple HTML tag preservation feature doesn't work
for `img` tags - it strips all of the attrs. The `Trans` component has
support for a more complex tag replacement feature, where the tags are
replaced with indexed placehodlers in the translation strings, but I
couldn't get it working.

The basic react-i18next translation function (which just substitutes in
the correct translated string) doesn't seem to mess with the HTML tags
at all, so I used that instead of the `Trans` component.  I reasoned
that somewhere under the hood, `Trans` was injecting the HTML string
into the DOM, so I might as well just do that explicitly and sanitize it
explicitly.

The downside is that now we have a separate component for translating
rich text, but overall I think things are clearer and more explicit, so
I'd consider it an overall improvement.

--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -74,6 +74,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^5.3.4",
     "react-select": "^5.7.4",
+    "sanitize-html": "^2.13.0",
     "tone": "^14.7.77",
     "use-interval": "1.4.0"
   },
@@ -101,6 +102,7 @@
     "@types/react-i18next": "^8.1.0",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sanitize-html": "^2.13.0",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@types/tmp": "0.2.4",
