--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -52,12 +52,19 @@
     "@tiptap/extension-bold": "^2.6.6",
     "@tiptap/extension-bullet-list": "^2.6.6",
     "@tiptap/extension-document": "^2.6.6",
+    "@tiptap/extension-dropcursor": "^2.6.6",
+    "@tiptap/extension-gapcursor": "^2.6.6",
     "@tiptap/extension-hard-break": "^2.6.6",
+    "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-italic": "^2.6.6",
     "@tiptap/extension-list-item": "^2.6.6",
     "@tiptap/extension-ordered-list": "^2.6.6",
     "@tiptap/extension-paragraph": "^2.6.6",
     "@tiptap/extension-strike": "^2.6.6",
+    "@tiptap/extension-table": "^2.6.6",
+    "@tiptap/extension-table-cell": "^2.6.6",
+    "@tiptap/extension-table-header": "^2.6.6",
+    "@tiptap/extension-table-row": "^2.6.6",
     "@tiptap/extension-text": "^2.6.6",
     "@tiptap/extension-underline": "^2.6.6",
     "@tiptap/pm": "^2.6.6",
