--- a/apps/design/frontend/package.json
+++ b/apps/design/frontend/package.json
@@ -55,6 +55,7 @@
     "@tiptap/extension-dropcursor": "^2.6.6",
     "@tiptap/extension-gapcursor": "^2.6.6",
     "@tiptap/extension-hard-break": "^2.6.6",
+    "@tiptap/extension-history": "^2.6.6",
     "@tiptap/extension-image": "^2.6.6",
     "@tiptap/extension-italic": "^2.6.6",
     "@tiptap/extension-list-item": "^2.6.6",
