--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "package.json": "sort-package-json",
     "*.ts,*.md,*.json": "prettier --write"
   },
-  "packageManager": "pnpm@8.3.1",
+  "packageManager": "pnpm@8.15.5",
   "devDependencies": {
     "@storybook/addon-a11y": "^7.2.2",
     "@storybook/addon-actions": "^7.2.2",
@@ -56,8 +56,9 @@
   "pnpm": {
     "overrides": {
       "@types/eslint": "8.4.1",
-      "typescript": "5.5.3",
-      "graceful-fs": "^4.2.9"
+      "graceful-fs": "^4.2.9",
+      "nan": "^2.20.0",
+      "typescript": "5.5.3"
     }
   }
 }
