Disable concurrency for pnpm install builds

--- a/.npmrc
+++ b/.npmrc
@@ -14,3 +14,9 @@ public-hoist-pattern[]=*stylelint*
 auto-install-peers=true
 
 strict-peer-dependencies=false
+
+# Concurrent node-gyp builds with pnpm seem to be flaky in CI:
+# See https://github.com/pnpm/pnpm/issues/2135
+# TODO: An upgrade to pnpm 9.x may resolve this an allow us to move back to
+# concurrent builds.
+child-concurrency=1
