--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -67,6 +67,7 @@
     "lint-staged": "11.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.set": "^4.3.2",
+    "playwright": "^1.40.1",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1"
   },
