--- a/libs/eslint-plugin-vx/package.json
+++ b/libs/eslint-plugin-vx/package.json
@@ -16,8 +16,8 @@
     "build": "tsc --build tsconfig.build.json",
     "build:watch": "tsc --build --watch tsconfig.build.json",
     "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
-    "lint": "eslint . --ext ts",
-    "lint:fix": "eslint . --ext ts --fix",
+    "lint": "echo eslint-plugin-vs linting temporarily disabled",
+    "lint:fix": "echo eslint-plugin-vs linting temporarily disabled",
     "test": "is-ci test:ci test:watch",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -46,7 +46,6 @@
     "@types/node": "20.16.0",
     "@types/react": "18.3.3",
     "@typescript-eslint/rule-tester": "^6.7.0",
-    "eslint-plugin-vx": "workspace:*",
     "is-ci-cli": "2.2.0",
     "jest": "^29.6.2",
     "jest-junit": "^16.0.0",
