clean up browser in tests

--- a/libs/bmd-ballot-fixtures/package.json
+++ b/libs/bmd-ballot-fixtures/package.json
@@ -19,7 +19,7 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:coverage": "TZ=America/Anchorage jest --coverage",
+    "test:coverage": "TZ=America/Anchorage jest --coverage --detectOpenHandles",
     "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
     "test:watch": "TZ=America/Anchorage jest --watch",
     "pre-commit": "lint-staged"
