--- a/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
+++ b/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
@@ -1676,7 +1676,7 @@
     "titleScannerSuccessScreen": "¡Su voto fue contado!",
     "titleScannerUndervoteWarning": "Se pueden sumar uno o más votos:",
     "titleScanningFailed": "Error de escaneo",
-    "titleUnofficialTestBallot": "Boleta de PRUEBA no oficial",
+    "titleUnofficialTestBallot": "Boleta de prueba no oficial",
     "titleVoterSettings": "Configuraciones:",
     "titleVoterSettingsAudio": "Audio",
     "titleVoterSettingsColor": "Color",
