update ask poll worker for help string

--- a/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
+++ b/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
@@ -1210,7 +1210,7 @@
     "titleBallotId": "Ballot ID",
     "titleBallotStyle": "Ballot Style",
     "titleBallotSuccessfullyCastPage": "Your ballot was cast!",
-    "titleBmdAskForHelpScreen": "Ask a Poll Worker for Help",
+    "titleBmdAskForHelpScreen": "Ask a poll worker for help",
     "titleBmdBallotRemovedScreen": "Ballot Removed",
     "titleBmdCastBallotScreen": "You’re Almost Done",
     "titleBmdIdleScreen": "Are you still voting?",
