--- a/apps/scan/frontend/package.json
+++ b/apps/scan/frontend/package.json
@@ -23,9 +23,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage node scripts/test.js --coverage --watchAll=false --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage node scripts/test.js --coverage --watchAll=false",
-    "test:watch": "TZ=America/Anchorage node scripts/test.js",
+    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "TZ=America/Anchorage jest --coverage",
+    "test:watch": "TZ=America/Anchorage jest --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
@@ -118,7 +118,6 @@
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "react-app-polyfill": "3.0.0",
-    "react-dev-utils": "12.0.1",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1",
     "vite": "4.5.0"
