--- a/apps/admin/frontend/package.json
+++ b/apps/admin/frontend/package.json
@@ -23,9 +23,9 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}' && stylelint 'src/**/*.css' --config .stylelintrc-css.js",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix && stylelint 'src/**/*.css' --config .stylelintrc-css.js --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage node scripts/test.js --coverage --watchAll=false --reporters=default --reporters=jest-junit --maxWorkers=6",
-    "test:coverage": "TZ=America/Anchorage node scripts/test.js --coverage --watchAll=false",
-    "test:watch": "TZ=America/Anchorage node scripts/test.js",
+    "test:ci": "TZ=America/Anchorage jest --coverage --reporters=default --reporters=jest-junit --maxWorkers=6",
+    "test:coverage": "TZ=America/Anchorage jest --coverage",
+    "test:watch": "TZ=America/Anchorage jest --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
@@ -91,7 +91,6 @@
     "prompts": "2.4.0",
     "react": "18.3.1",
     "react-app-polyfill": "3.0.0",
-    "react-dev-utils": "12.0.1",
     "react-dom": "18.3.1",
     "react-pdf": "7.7.0",
     "react-router-dom": "^5.3.4",
