--- a/apps/mark-scan/frontend/package.json
+++ b/apps/mark-scan/frontend/package.json
@@ -22,10 +22,10 @@
     "stylelint:run": "stylelint 'src/**/*.{js,jsx,ts,tsx}'",
     "stylelint:run:fix": "stylelint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "test": "is-ci test:ci test:watch",
-    "test:ci": "TZ=America/Anchorage CI=true node scripts/test.js --maxWorkers=6 --coverage --reporters=default --reporters=jest-junit",
-    "test:coverage": "TZ=America/Anchorage node scripts/test.js --coverage --watchAll=false",
-    "test:update": "TZ=America/Anchorage node scripts/test.js -u  --watchAll=false",
-    "test:watch": "TZ=America/Anchorage node scripts/test.js",
+    "test:ci": "TZ=America/Anchorage CI=true jest --maxWorkers=6 --coverage --reporters=default --reporters=jest-junit",
+    "test:coverage": "TZ=America/Anchorage jest --coverage",
+    "test:update": "TZ=America/Anchorage jest -u",
+    "test:watch": "TZ=America/Anchorage jest --watch",
     "type-check": "tsc --build"
   },
   "lint-staged": {
@@ -77,7 +77,6 @@
     "path": "^0.12.7",
     "react": "18.3.1",
     "react-app-polyfill": "3.0.0",
-    "react-dev-utils": "12.0.1",
     "react-dom": "18.3.1",
     "react-idle-timer": "^5.7.2",
     "react-router-dom": "^5.3.4",
@@ -123,7 +122,6 @@
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "11.0.0",
     "node-fetch": "^2.6.0",
-    "react-dev-utils": "12.0.1",
     "sort-package-json": "^1.50.0",
     "ts-jest": "29.1.1",
     "vite": "4.5.0"
