--- a/libs/ballot-interpreter/package.json
+++ b/libs/ballot-interpreter/package.json
@@ -12,10 +12,12 @@
   ],
   "scripts": {
     "benchmark": "jest --runInBand --projects benchmarks",
-    "build": "pnpm install:rust-addon && pnpm build:rust-addon && pnpm build:ts",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "pnpm install:rust-addon && pnpm build:rust-addon && pnpm build:ts",
     "build:rust-addon": "cargo-cp-artifact -nc build/hmpb-ts/rust_addon.node -- cargo build --message-format=json-render-diagnostics --release --offline",
     "build:ts": "tsc --build tsconfig.build.json",
-    "clean": "cargo clean && rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "cargo clean --release --package ballot-interpreter && rm -rf build && tsc --build --clean tsconfig.build.json",
     "install:rust-addon": "cargo fetch",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
