--- a/libs/fixture-generators/package.json
+++ b/libs/fixture-generators/package.json
@@ -11,8 +11,10 @@
   },
   "scripts": {
     "type-check": "tsc --build",
-    "build": "tsc --build tsconfig.build.json",
-    "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "tsc --build tsconfig.build.json",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
     "generate-cvr-fixtures": "./bin/generate-cvr-fixtures",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
