--- a/libs/fixtures/package.json
+++ b/libs/fixtures/package.json
@@ -13,9 +13,11 @@
   ],
   "scripts": {
     "type-check": "tsc --build",
-    "build": "tsc --build tsconfig.build.json",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "tsc --build tsconfig.build.json",
     "build:resources": "bash build_resources.sh",
-    "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
