--- a/libs/hmpb/package.json
+++ b/libs/hmpb/package.json
@@ -9,8 +9,10 @@
     "bin"
   ],
   "scripts": {
-    "build": "tsc --build tsconfig.build.json",
-    "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "tsc --build tsconfig.build.json",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
     "format": "prettier '**/*.+(css|graphql|json|less|md|mdx|sass|scss|yaml|yml)' --write",
     "generate-fixtures": "DEBUG=hmpb:ballot_fixtures ./bin/generate-fixtures",
     "lint": "pnpm type-check && eslint .",
