--- a/libs/logging/package.json
+++ b/libs/logging/package.json
@@ -12,12 +12,14 @@
   ],
   "scripts": {
     "type-check": "tsc --build",
-    "build": "tsc --build tsconfig.build.json",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "tsc --build tsconfig.build.json",
     "build:generate-docs": "pnpm esr --cache ./scripts/generate_documentation.ts",
     "build:generate-typescript-types": "pnpm esr --cache ./scripts/generate_types_from_toml.ts",
     "build:generate-rust-types": "pnpm esr --cache ./scripts/generate_rust_enums_from_toml.ts",
     "build:generate-types": "pnpm build:generate-typescript-types && pnpm build:generate-rust-types",
-    "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
