--- a/libs/pdi-scanner/package.json
+++ b/libs/pdi-scanner/package.json
@@ -11,10 +11,12 @@
     "build"
   ],
   "scripts": {
-    "build": "pnpm install:rust-addon && pnpm build:rust-addon && pnpm build:ts",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "pnpm install:rust-addon && pnpm build:rust-addon && pnpm build:ts",
     "build:ts": "tsc --build tsconfig.build.json",
     "build:rust-addon": "cargo build --release --offline",
-    "clean": "cargo clean && rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "cargo clean --release --package pdi-scanner && rm -rf build && tsc --build --clean tsconfig.build.json",
     "install:rust-addon": "cargo fetch",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
