--- a/libs/res-to-ts/package.json
+++ b/libs/res-to-ts/package.json
@@ -12,8 +12,10 @@
   },
   "scripts": {
     "type-check": "tsc --build",
-    "build": "pnpm type-check",
-    "clean": "rm -rf build tsconfig.tsbuildinfo tsconfig.build.tsbuildinfo",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "pnpm type-check",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "rm -rf build && tsc --build --clean",
     "lint": "pnpm type-check && eslint .",
     "lint:fix": "pnpm type-check && eslint . --fix",
     "test": "is-ci test:ci test:watch",
