voter flow updates

--- a/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
+++ b/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
@@ -932,7 +932,7 @@
     "instructionsBmdControllerSandboxMarkScan": "Press any button on the controller to learn what it is and how to use it. When you're done, press the question mark shaped “Help” button at the top left corner of the controller again to return to your ballot.",
     "instructionsBmdInsertBallotFaceUp": "Be sure to insert the sheet with the printed side facing upwards.",
     "instructionsBmdInsertPreviouslyPrintedBallot": "Please remove the sheet and insert the previously printed ballot.",
-    "instructionsBmdInvalidatedBallot": "You have indicated your ballot needs changes. Please alert a poll worker to invalidate the incorrect ballot sheet.",
+    "instructionsBmdInvalidatedBallot": "You have indicated your ballot needs changes.",
     "instructionsBmdMoveToSelectToContinuePatDevice": "Use the move input to select the Okay button and then use the select input to continue.",
     "instructionsBmdNextToContinue": "Press the right button to continue.",
     "instructionsBmdPaperJam": "Please alert a poll worker to clear the jam.",
@@ -962,7 +962,7 @@
     "instructionsScannerRemoveBallotToContinue": "Remove ballot to continue.",
     "instructionsScannerRemoveDoubleSheet": "Remove your ballot and insert one sheet at a time.",
     "labelAllPrecinctsSelection": "All Precincts",
-    "labelBallotStyle": "Ballot style:",
+    "labelBallotStyle": "Ballot Style:",
     "labelBmdPatCalibrationInputIdentified": "Input Identified:",
     "labelBmdPatCalibrationInputTriggered": "Input Triggered:",
     "labelBmdSecondsRemaining": "Number of seconds remaining:",
@@ -1205,7 +1205,7 @@
     "number99": "99",
     "promptBmdConfirmRemoveWriteIn": "Do you want to deselect and remove your write-in candidate?",
     "promptBmdSoundDiagnosticScreen": "Press the select button to confirm sound is working.",
-    "titleAudioOnlyModeEnabled": "Audio-Only Mode is Enabled",
+    "titleAudioOnlyModeEnabled": "Audio-Only Mode",
     "titleBallotBoxFull": "Ballot Box Full",
     "titleBallotId": "Ballot ID",
     "titleBallotStyle": "Ballot Style",
@@ -1250,7 +1250,7 @@
     "titleScannerUndervoteWarning": "You may add one or more votes:",
     "titleScanningFailed": "Scanning Failed",
     "titleUnofficialTestBallot": "Unofficial TEST Ballot",
-    "titleVoterSettings": "Settings:",
+    "titleVoterSettings": "Settings",
     "titleVoterSettingsAudio": "Audio",
     "titleVoterSettingsColor": "Color",
     "titleVoterSettingsSize": "Text Size",
