PAT diagnostic / calibration

--- a/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
+++ b/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
@@ -368,7 +368,7 @@
     "titleBmdJammedScreen": "纸被卡住",
     "titleBmdLoadingReinsertedBallotScreen": "加载您的选票...",
     "titleBmdPatCalibrationConfirmExitScreen": "设备输入已识别",
-    "titleBmdPatCalibrationIdentificationPage": "个人辅助技术设备识别",
+    "titleBmdPatCalibrationSetupPage": "个人辅助技术设备识别",
     "titleBmdPatCalibrationIdentifyMoveInput": "识别 \"移动 \"输入",
     "titleBmdPatCalibrationIdentifySelectInput": "识别 \"选择 \"输入",
     "titleBmdPatCalibrationIntroStep": "测试设备",
@@ -795,7 +795,7 @@
     "titleBmdJammedScreen": "紙被卡住",
     "titleBmdLoadingReinsertedBallotScreen": "加載您的選票...",
     "titleBmdPatCalibrationConfirmExitScreen": "設備輸入已識別",
-    "titleBmdPatCalibrationIdentificationPage": "個人輔助技術設備識別",
+    "titleBmdPatCalibrationSetupPage": "個人輔助技術設備識別",
     "titleBmdPatCalibrationIdentifyMoveInput": "識別 \"移動 \"輸入",
     "titleBmdPatCalibrationIdentifySelectInput": "識別 \"選擇 \"輸入",
     "titleBmdPatCalibrationIntroStep": "測試設備",
@@ -876,7 +876,7 @@
     "buttonBallotIsIncorrect": "My Ballot is Incorrect",
     "buttonBmdReviewCardAction": "Press the select button to change your votes for this contest.",
     "buttonBmdReviewCardActionPatDevice": "Use the select input to change your votes for this contest.",
-    "buttonBmdSkipPatCalibration": "Skip Identification",
+    "buttonBmdSkipPatCalibration": "Skip Setup",
     "buttonCancel": "Cancel",
     "buttonCastBallotAsIs": "Cast Ballot As Is",
     "buttonChange": "Change",
@@ -1221,8 +1221,8 @@
     "titleBmdJamClearedScreen": "Jam Cleared",
     "titleBmdJammedScreen": "Paper is Jammed",
     "titleBmdLoadingReinsertedBallotScreen": "Loading your ballot...",
-    "titleBmdPatCalibrationConfirmExitScreen": "Device Inputs Identified",
-    "titleBmdPatCalibrationIdentificationPage": "Personal Assistive Technology Device Identification",
+    "titleBmdPatCalibrationConfirmExitScreen": "Device Inputs Chosen",
+    "titleBmdPatCalibrationSetupPage": "Personal Assistive Technology Device Setup",
     "titleBmdPatCalibrationIdentifyMoveInput": "Identify the \"Move\" Input",
     "titleBmdPatCalibrationIdentifySelectInput": "Identify the \"Select\" Input",
     "titleBmdPatCalibrationIntroStep": "Test Your Device",
@@ -1649,7 +1649,7 @@
     "titleBmdJammedScreen": "El papel está atascado",
     "titleBmdLoadingReinsertedBallotScreen": "Cargando tu boleta...",
     "titleBmdPatCalibrationConfirmExitScreen": "Entradas de dispositivo identificadas",
-    "titleBmdPatCalibrationIdentificationPage": "Identificación de dispositivos de tecnología de asistencia personal.",
+    "titleBmdPatCalibrationSetupPage": "Identificación de dispositivos de tecnología de asistencia personal.",
     "titleBmdPatCalibrationIdentifyMoveInput": "Identifique la entrada \"Mover\"",
     "titleBmdPatCalibrationIdentifySelectInput": "Identifique la entrada \"Seleccionar\"",
     "titleBmdPatCalibrationIntroStep": "Pruebe su dispositivo",
