--- a/libs/types-rs/package.json
+++ b/libs/types-rs/package.json
@@ -7,6 +7,7 @@
   "author": "VotingWorks Eng <eng@voting.works>",
   "scripts": {
     "build": "cargo build",
+    "clean": "cargo clean",
     "lint": "cargo clippy",
     "test": "cargo test"
   },
