--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -12,10 +12,12 @@
   ],
   "scripts": {
     "type-check": "tsc --build",
-    "build": "tsc --build tsconfig.build.json && pnpm build:app-strings-catalog",
+    "build": "pnpm --filter $npm_package_name... build:self",
+    "build:self": "tsc --build tsconfig.build.json && pnpm build:app-strings-catalog",
     "build:app-strings-catalog": "i18next && ./scripts/finalize-app-strings-catalog",
     "check:app-strings-catalog": "./scripts/check-app-strings-catalog",
-    "clean": "rm -rf build && tsc --build --clean tsconfig.build.json",
+    "clean": "pnpm --filter $npm_package_name... clean:self",
+    "clean:self": "rm -rf build && tsc --build --clean tsconfig.build.json",
     "lint": "pnpm type-check && eslint . && pnpm stylelint:run && pnpm check:app-strings-catalog",
     "lint:fix": "pnpm type-check && eslint . --fix && pnpm stylelint:run:fix",
     "start": "storybook dev -p 6060",
