update Ballots Scanned to Sheets Scanned

--- a/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
+++ b/libs/fixtures/data/electionPrimaryPrecinctSplits/appStrings.json
@@ -132,7 +132,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "空格",
     "labelNumBallotContests": "您选票上的竞选数量",
-    "labelNumBallotsScanned": "选票已扫描",
+    "labelNumSheetsScanned": "选票已扫描",
     "labelNumVotesRemaining": "本次竞选剩余票数",
     "labelNumVotesUnused": "未使用票数",
     "labelSelected": "已选",
@@ -559,7 +559,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "空格",
     "labelNumBallotContests": "您選票上的競選數量",
-    "labelNumBallotsScanned": "選票已掃描",
+    "labelNumSheetsScanned": "選票已掃描",
     "labelNumVotesRemaining": "本次競選剩餘票數",
     "labelNumVotesUnused": "未使用票數",
     "labelSelected": "已選",
@@ -986,7 +986,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "space",
     "labelNumBallotContests": "Number of contests on your ballot:",
-    "labelNumBallotsScanned": "Ballots Scanned",
+    "labelNumSheetsScanned": "Sheets Scanned",
     "labelNumVotesRemaining": "Votes remaining in this contest:",
     "labelNumVotesUnused": "Number of unused votes:",
     "labelSelected": "Selected:",
@@ -1413,7 +1413,7 @@
     "labelKeyboardSingleQuote": "'",
     "labelKeyboardSpaceBar": "espacio",
     "labelNumBallotContests": "Número de contiendas en su boleta:",
-    "labelNumBallotsScanned": "Boletas escaneadas",
+    "labelNumSheetsScanned": "Boletas escaneadas",
     "labelNumVotesRemaining": "Votos restantes en este concurso:",
     "labelNumVotesUnused": "Número de votos no utilizados:",
     "labelSelected": "Seleccionados:",
